# py-project-template-poetry

./: .env.development  .env.example  .env.production  .env.test  .gitignore  .pre-commit-config.yaml  LLM_PROMPTS.md  README.md  project_structure.sh  pyproject.toml  requirements.txt  run.sh  run_app.py
.github/workflows/: py-project-template-poetry.yml
alembic/: env.py
alembic/versions/: 20260615_1100_init_diary_entries_table.py  20260617_1400_add_auth_relationship_tables.py
app/: main.py
app/api/: api.py
app/api/endpoints/: demo_api.py  diary_api.py
app/config/: database_config.py
app/core/: api_response.py  config.py  logging_uru.py
app/db/: metadata.py  sqlalchemy_db.py
app/decorators/: cache_decorator.py
app/middleware/: exception_handlers.py  request_logging.py
app/models/: __init__.py  diary_entry.py
app/schemas/: __init__.py  common_data.py  diary.py
app/scripts/: create_database.py  docker-entrypoint.sh  init_database.py  manage_db.py  set_env.py
app/services/: demo_service.py  diary_service.py
tests/: conftest.py  test_alembic_metadata.py  test_api_responses.py  test_config.py  test_github_workflow_template.py  test_logging_uru.py  test_main.py  test_project_structure_script.py  test_set_env.py  test_sqlalchemy_db.py
