[project]
name = "py-project-template-poetry"
version = "0.1.0"
description = "情侣日记后端"
authors = [
    {name = "yuye",email = "18838280615@163.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.103.0",
    "uvicorn>=0.23.2",
    "sqlalchemy>=2.0.20",
    "alembic>=1.12.0",
    "mysql-connector-python>=8.1.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.3.0",
    "pydantic-settings>=2.0.3",
    "httpx>=0.25.0",
    "cachetools>=5.3.0",
    "loguru>=0.7.0",
    "click>=8.0.0",
]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
pytest = ">=8.3.0,<9.0.0"
pytest-asyncio = ">=0.24.0,<1.0.0"
ruff = ">=0.6.0,<1.0.0"
pre-commit = ">=3.8.0,<4.0.0"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = "-ra"

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["B008"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
